force-app/main/default/objects/Track_PaymentMilestone__c/Track_PaymentMilestone__c.object-meta.xml
<CustomObject>
    <label>Track Payment Milestone</label>
    <nameField>
        <displayFormat>PMT-{00000}</displayFormat>
        <label>PaymentMilestone Track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Track Payment Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>