force-app/main/default/objects/Track_PaymentMilestone__c/fields/Amount_Utilized_In_PaymentMilestone__c.field-meta.xml
<CustomField>
    <fullName>Amount_Utilized_In_PaymentMilestone__c</fullName>
    <label>Amount Utilized In PM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>