force-app/main/default/objects/Track_PaymentMilestone__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipName>Track_PaymentMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>