force-app/main/default/objects/Track_PaymentMilestone__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand</label>
    <referenceTo>Demand__c</referenceTo>
    <relationshipName>Track_PaymentMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>