force-app/main/default/objects/Track_PaymentMilestone__c/fields/Demand_Amount__c.field-meta.xml
<CustomField>
    <fullName>Demand_Amount__c</fullName>
    <formula>Demand__r.Total_Amount_with_Tax_Demanded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>