force-app/main/default/objects/Track_PaymentMilestone__c/fields/Partially_Utilized_In_Payment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Partially_Utilized_In_Payment_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partially Utilized In PM</label>
    <type>Checkbox</type>
</CustomField>