force-app/main/default/objects/Track_PaymentMilestone__c/fields/Payment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Milestone</label>
    <referenceTo>Payment_Milestones__c</referenceTo>
    <relationshipName>Track_PaymentMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>