force-app/main/default/objects/Track_PaymentMilestone__c/fields/Payment_Milestone_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestone_Amount__c</fullName>
    <formula>Payment_Milestone__r.Total_Installment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Milestone Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>