force-app/main/default/objects/Track_PaymentMilestone__c/fields/Remaining_Receipt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Receipt_Amount__c</fullName>
    <label>Remaining Receipt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>