force-app/main/default/objects/Track_PaymentMilestone__c/fields/Track_PaymentMilestone__c.field-meta.xml
<CustomField>
    <fullName>Track_PaymentMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Track Payment Milestone</label>
    <referenceTo>Track_PaymentMilestone__c</referenceTo>
    <relationshipLabel>Track Payment Milestones</relationshipLabel>
    <relationshipName>Track_PaymentMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>