force-app/main/default/objects/Track_PaymentMilestone__c/fields/Utilized_in_Payment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Utilized_in_Payment_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilized in Payment Milestone</label>
    <type>Checkbox</type>
</CustomField>